@@ -1,0 +1,1 @@
+DIST set_prompt-1.0.tar.gz 4473 RMD160 088832307ba6f3b129e3e10c6ab03d45cb5f5165 SHA1 d7fb64e5c5f876d5a3c1644f816ec53316383171 SHA256 2dc244d60ab37c220bfadb6091cea1bddf7216af53ed085fa2d2568f47827f2e
