@@ -1,1 +1,1 @@
-DIST squash_dir-11.3.tar.gz 25744 RMD160 2b52807d10979c89fc3fc55cef3ef0436e4ff98c SHA1 0feb9d03521b6f24b4737119acf35f34cabd6788 SHA256 6c36f5ce7f71ee12ce51c9cabb9f6828450b994f11f3655204e51c492caaa88a
+DIST squash_dir-11.4.tar.gz 25859 RMD160 cf328da45d9a176461fdc927d58bf3467a02005a SHA1 683e69da3a107f71b06db4f712665375aa4cfd92 SHA256 55bba321e9bd5cefb7e40d3219d32c4337707f84a6c936fddbc7e8c268ec2a75
