@@ -1,1 +1,1 @@
-DIST kernel-1.11.tar.gz 5809 RMD160 1bfac1dd7044f2a11379995c9646c9380faba2af SHA1 5d95a85f73b0e485691380f286f8d29e6800165b SHA256 0e3a6c56f2b371d704c5e23804b827297fe919b12726906fd7af7379046751aa
+DIST kernel-1.12.tar.gz 5898 RMD160 8b99588eb432c43666538331e8a8258da2822b5a SHA1 a250590a68e06ef0035806555bcfea007ab2a8d5 SHA256 64aae4da1a8329538b89041b611bd15f5c3b7962ecc5cadceedb38e0b735410a
