@@ -1,0 +1,8 @@
+# ChangeLog for app-shells/set_prompt
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+*set_prompt-1.0 (17 Feb 2012)
+
+  17 Feb 2011; Martin Väth <martin@mvath.de>
+  New ebuild from scratch.
