@@ -2,14 +2,19 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*kernel-1.12 (17 Feb 2012)
+
+  17 Feb 2011; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Improve status line support; change option.
+
 *kernel-1.11 (29 Jan 2012)
 
-  29 Jan 2011; Martin Väth <martin@mvath.de>
+  29 Jan 2012; Martin Väth <martin@mvath.de>
   Version bump, remove old ebuild.
 
 *kernel-1.10 (21 Dec 2011)
 
-  09 Jan 2011; Martin Väth <martin@mvath.de>
+  09 Jan 2012; Martin Väth <martin@mvath.de>
   Reformat deps.
 
   26 Dec 2011; Martin Väth <martin@mvath.de>
