@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/squash_dir
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
+
+*squash_dir-11.4 (17 Feb 2012)
+
+  17 Feb 2012; Martin Väth <martin@mvath.de>
+  Version bump. Support soft status line for screen. Care about TERM.
 
 *squash_dir-11.3 (03 Nov 2011)
 
